src/test/fail/inherit_noexist.ly
#[
SyntaxError: Class 'invalid' does not exist.
Where: File "test/fail/inherit_noexist.ly" at line 6
]#

class abc() < invalid {  }
